<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentDisplayInfo">

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonRetour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="92dp">

        <TextView
            android:id="@+id/textViewShowNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A2textViewShowNom"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewShowPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A2textViewShowPrenom"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewShowDateNaissance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A2textViewShowDateNaissance"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewShowVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A2textViewShowVille"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>